--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body{
 main{
     margin: auto;
     max-width: 600px;
+    padding: 1rem;
     
 }
 
@@ -33,18 +34,43 @@ textarea{
     display: block;
     width: 100%;
     height: 20vh;
-    margin: 1rem;
+    margin-top: 2rem;
     padding: 1rem;
     
 }
 #translate{
-    margin-left: 1rem;
+    background-color: var(--primary-color);
+    margin: 1rem 0rem;
+    padding: 1rem 2rem;
+    font-family: 'Dancing Script';
+    font-weight: bold;
+    font-size: larger;
+    border: none;
 }
 #output{
   display: block;
+  box-sizing: border-box;
   border: 1px solid black;
   width: 100%;
-  height: 20vh; 
-  margin: 1rem;
+  min-height: 10vh;
+  max-height: 20vh; 
   padding: 1rem; 
+  overflow: scroll;
+}
+
+footer{
+    background-color: var(--primary-color);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding: 1rem;
+    font-size: x-large;
+    text-align: center;
+    height: 20vh;
+}
+
+footer p{
+    max-width: 600px;
+    margin: auto;
+    
 }
